--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 .home {
   height: 100%;
-  padding-top: 40vh;
+  padding-top: 50vh;
   overflow: hidden;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -27,7 +27,6 @@
 
 .home__name--last {
   color: #ff652f;
-  font-weight: 700;
 }
 
 .menu-btn {
@@ -414,7 +413,36 @@
   margin-top: 2rem;
 }
 
+@media screen and (min-width: 330px) {
+  .home {
+    padding-top: 31vh;
+    background: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.7)), to(rgba(39, 39, 39, 0.3))), url("../img/Profile.jpg") center top no-repeat;
+    background: linear-gradient(to right, rgba(39, 39, 39, 0.7), rgba(39, 39, 39, 0.3)), url("../img/Profile.jpg") center top no-repeat;
+    background-size: contain;
+  }
+  .home__name {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+    margin-top: 1rem;
+    border-bottom: 2px solid #fff;
+  }
+  .home__name--last {
+    color: #ff652f;
+    font-weight: 500;
+  }
+}
+
 @media screen and (min-width: 768px) {
+  .home {
+    background: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.7)), to(rgba(39, 39, 39, 0.3))), url("../img/Profile.jpg") center top no-repeat;
+    background: linear-gradient(to right, rgba(39, 39, 39, 0.7), rgba(39, 39, 39, 0.3)), url("../img/Profile.jpg") center top no-repeat;
+    background-size: cover;
+    background-position: 50% -100px;
+    padding-top: 70vh;
+  }
+  .home__name {
+    font-size: 4rem;
+  }
   .menu-btn {
     visibility: hidden;
   }
@@ -439,6 +467,20 @@
   .about__bio-image {
     height: 70vh;
   }
+  .projects__items {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .projects__items {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .about__bio-image {
+    height: 80vh;
+  }
 }
 
 body {
@@ -449,8 +491,16 @@ body {
   line-height: 1;
 }
 
+.logo {
+  height: 3rem;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  margin-top: 1rem;
+}
+
 h1, h2, h3 {
   font-weight: 400;
+  margin-top: 1rem;
 }
 
 a {
@@ -466,7 +516,7 @@ header {
   position: fixed;
   z-index: 2;
   width: 100%;
-  padding: 1rem;
+  padding: .7rem;
 }
 
 main {
